# umatoi

./: Cargo.toml  LICENSE
examples/: gui_id_checker.rs  id_checker.rs  id_checker2.rs  id_checker3.rs
src/: api.rs  ble.rs  characteristic.rs  cube.rs  device_interface.rs  handler.rs  integer_converter.rs  interface.rs  lib.rs  notification_manager.rs  payload.rs  position.rs  scanner.rs
src/api/: simple.rs
src/characteristic/: battery.rs  button.rs  characteristic_uuid.rs  configuration.rs  id.rs  id_information.rs  indicator.rs  motor.rs  sensor.rs  sound.rs
src/characteristic/battery/: information.rs
src/characteristic/battery/information/: battery_information.rs
src/characteristic/button/: def.rs  information.rs
src/characteristic/button/def/: button_def.rs  state_def.rs
src/characteristic/button/information/: button.rs  button_information.rs
src/characteristic/configuration/: command.rs  def.rs  id_sensor.rs  information.rs  motor.rs  sensor.rs  version.rs
src/characteristic/configuration/command/: id_sensor_command.rs  motor_command.rs  sensor.rs  sensor_command.rs  version.rs  version_command.rs
src/characteristic/configuration/def/: command_id.rs  common_def.rs  condition.rs  function_type.rs  id_sensor_def.rs  sensor_def.rs
src/characteristic/configuration/information/: id_sensor_information.rs  motor.rs  motor_information.rs  sensor.rs  sensor_information.rs  version_information.rs
src/characteristic/id/: def.rs  information.rs
src/characteristic/id/def/: id_def.rs  id_type.rs
src/characteristic/id/information/: id.rs  id_information.rs
src/characteristic/indicator/: command.rs  def.rs
src/characteristic/indicator/command/: indicator.rs  indicator_command.rs
src/characteristic/indicator/def/: command_id_def.rs  indicator_def.rs  params.rs  params_def.rs
src/characteristic/motor/: acceleration.rs  command.rs  control.rs  def.rs  information.rs  response.rs  speed.rs  target.rs
src/characteristic/motor/command/: acceleration.rs  acceleration_command.rs  control.rs  control_command.rs  target_command.rs
src/characteristic/motor/def/: acceleration_def.rs  command_id_def.rs  common_def.rs  motor_params_def.rs  params.rs  target_def.rs
src/characteristic/motor/information/: speed_information.rs  target.rs  target_information.rs
src/characteristic/sensor/: command.rs  def.rs  information.rs  magnetic.rs  motion.rs  posture_angle.rs  response.rs
src/characteristic/sound/: command.rs  def.rs
src/cube/: battery.rs  button.rs  configuration.rs  connection.rs  core_cube.rs  cube.rs  id_information.rs  motor.rs  sensor.rs  uuid.rs
src/cube/configuration/: def.rs  id_sensor.rs  motor.rs  sensor.rs  version.rs
src/cube/motor/: acceleration.rs  control.rs  def.rs  response.rs  speed.rs  target.rs
src/cube/sensor/: def.rs  magnetic.rs  motion.rs  posture_angle.rs  response.rs
src/device_interface/: ble.rs
src/interface/: ble.rs
(+23 files in other folders)
