[package]
name = "umatoi"
version = "0.3.0"
authors = ["yabe_z <Kazuhiro.Yabe@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = [ "toio", "toio_core_cube" ]
description = "A small library for toio core cube"
repository = "https://github.com/kaz399/umatoi.rs/"
homepage = "https://github.com/kaz399/umatoi.rs/"

[dependencies]
futures = "0.3.25"
async-trait = "0.1.60"
thiserror = "1.0.37"
env_logger = "0.9.3"
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4"] }
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal"] }
btleplug = "0.10.4"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.15.0"
byteorder = "1.4.3"

[dev-dependencies]
lazy_static = "1.4.0"
ctrlc = { version = "3.2.4", features = ["termination"] }
clap = { version = "3.2.22", features = ["derive"]}
rand = "0.8.5"
pixels = "0.9.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
