[package]
name = "umatoi"
version = "0.4.1"
authors = ["yabe_z <Kazuhiro.Yabe@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = [ "toio", "toio_core_cube" ]
description = "A small library for toio core cube"
repository = "https://github.com/kaz399/umatoi.rs/"
homepage = "https://github.com/kaz399/umatoi.rs/"

[dependencies]
futures = "0.3.28"
async-trait = "0.1.73"
thiserror = "1.0.47"
env_logger = "0.10.0"
log = "0.4.20"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal"] }
btleplug = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
once_cell = "1.18.0"
byteorder = "1.4.3"

[dev-dependencies]
lazy_static = "1.4.0"
ctrlc = { version = "3.4.0", features = ["termination"] }
clap = { version = "3.2.25", features = ["derive"]}
rand = "0.8.5"
pixels = "0.9.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
